# ia-labs

./: .bazelrc  AGENTS.md  GEMINI.md  MODULE.bazel  README.md
java/a2a/: BUILD.bazel
java/a2a/base/engine/cleaner/: BUILD.bazel
java/a2a/base/model/: BUILD.bazel
java/a2a/base/model/src/main/java/io/github/jtpadilla/a2a/model/: A2AModel.java
java/a2a/base/model/src/main/java/io/github/jtpadilla/a2a/model/task/: TaskKey.java
java/a2a/base/model/src/main/java/io/github/jtpadilla/a2a/model/tenant/: TenanClientKey.java  TenantDefaultKey.java  TenantKey.java
java/a2a/base/sandbox/: BUILD.bazel
java/a2a/base/sandbox/src/main/java/io/github/jtpadilla/a2a/model/: Todo.java
java/a2a/base/sandbox/src/main/java/io/github/jtpadilla/a2a/sandbox/: AgentCardFactory.java  Main.java  WellKnownHandler.java
java/a2a/base/server/: BUILD.bazel
java/a2a/base/server/src/main/java/io/github/jtpadilla/server/a2a/server/: AgentServer.java
java/a2a/base/service/dispatcher/: BUILD.bazel
java/a2a/base/service/repository/: BUILD.bazel
java/a2a/base/src/main/java/io/github/jtpadilla/server/a2a/server/: AgentServer.java
java/a2a/core/server/src/main/java/io/github/jtpadilla/a2a/core/server/: SkillProvider.java
java/a2a/gcloud/: TODO.txt
java/a2a/server/base/grpc/: BUILD.bazel
java/a2a/server/base/http/: BUILD.bazel
java/a2a/server/vanilla/service/skill/: BUILD.bazel
java/a2a/skill/echo/: BUILD.bazel
java/a2a/skill/echo/src/main/java/io/github/jtpadilla/a2a/skill/echo/: EchoSkill.java
java/a2a/src/main/java/io/github/jtpadilla/server/a2a/model/: A2AModel.java
java/a2a/vanilla/service/repository/: BUILD.bazel
java/bootstrap/gcloud/context/: BUILD.bazel
java/example/ai/genai/common/: BUILD.bazel
java/example/ai/genai/example/: BUILD.bazel
java/example/ai/genai/example/src/main/java/com/google/genai/examples/: CachedContentOperationsAsync.java  ChatWithHistoryAsync.java  ChatWithHistoryAsyncStreaming.java  CountTokens.java  EditImageMaskReference.java  EditImageStyleTransfer.java  EditImageSubjectReference.java  EmbedContentAsync.java  FileOperationsAsync.java  GenerateContentWithConfigs.java  GenerateImagesAsync.java  LiveAudioConversationAsync.java  LiveTextConversationAsync.java  LiveTextConversationResumptionAsync.java  ModelManagementAsync.java  UpscaleImageAsync.java
java/example/dagger/example/: BUILD.bazel  README.md
java/example/dagger/example/src/main/java/io/github/jtpadilla/example/dagger/health/: HealthCheckModule.java  HealthMonitor.java  HealthMonitorApp.java  HealthMonitorComponent.java
java/example/gcloud/datastore/: BUILD.bazel
java/example/gcloud/datastore/src/main/java/io/github/jtpadilla/example/gcloud/datastore/: DatastoreExample.java
java/example/gcloud/storage/: BUILD.bazel
java/example/gcloud/storage/src/main/java/io/github/jtpadilla/example/gcloud/storage/: StorageExample.java
java/example/gemma3/: BUILD.bazel
java/example/gemma3/src/main/java/io/github/jtpadilla/example/gemma3/: Gemma3Client.java
java/example/general/apifuture/: BUILD.bazel
java/example/general/apifuture/src/main/java/io/github/jtpadilla/example/googleapi/apifuture/: ApiFutureExample.java
java/example/helidon/grpc/: BUILD.bazel
java/example/helidon/grpc/client/: BUILD.bazel
java/example/helidon/grpc/client/src/main/java/io/helidon/example/grpc/client/: ApiKeyClientInterceptor.java  GrpcClientMain.java
java/example/helidon/grpc/server/: BUILD.bazel
java/example/helidon/grpc/server/src/main/java/io/helidon/example/grpc/server/: ApiKeyInterceptor.java  EchoService.java  GrpcServerMain.java
java/example/helidon/grpc/src/main/java/io/helidon/example/grpc/: EchoService.java  GrpcClientMain.java  GrpcServerMain.java
java/example/javelit/001-helloworld/: BUILD.bazel
java/example/javelit/001-helloworld/src/main/java/io/github/jtpadilla/example/javelit/helloworld/: HelloWorld.java
java/example/javelit/002-displaytext/: BUILD.bazel
java/example/javelit/002-displaytext/src/main/java/io/github/jtpadilla/example/javelit/displaytext/: DisplayText.java
java/example/javelit/003-displaytablelist/: BUILD.bazel
java/example/javelit/003-displaytablelist/src/main/java/io/github/jtpadilla/example/javelit/displaytablelist/: DisplayTableList.java
java/example/javelit/004-displaytablemap/: BUILD.bazel
java/example/javelit/004-displaytablemap/src/main/java/io/github/jtpadilla/example/javelit/displaytablemap/: DisplayTableMap.java
java/example/javelit/005-drawlinechart/: BUILD.bazel
java/example/javelit/005-drawlinechart/src/main/java/io/github/jtpadilla/example/javelit/drawlinechart/: DrawLineChart.java
java/example/javelit/006-drawgauge/: BUILD.bazel
java/example/javelit/006-drawgauge/src/main/java/io/github/jtpadilla/example/javelit/drawgauge/: DrawGauge.java
java/example/javelit/007-widgetslider/: BUILD.bazel
java/example/javelit/007-widgetslider/src/main/java/io/github/jtpadilla/example/javelit/widgetsslider/: WidgetSlider.java  WidgetsSlider.java
java/example/javelit/009-widgetcheckboxoptions/: BUILD.bazel
java/example/javelit/010-layout/: BUILD.bazel
java/example/javelit/011-layout2/: BUILD.bazel
java/example/javelit/013-firstapp/: BUILD.bazel
java/example/telegram/: BUILD.bazel
java/example/telegram/src/main/java/io/github/jtpadilla/example/telegram/: TelegrambotsExample.java  UnitResources.java
java/example/telegram/src/main/java/io/github/jtpadilla/example/telegram/config/: TelegramBotConfig.java
java/example/telegram/src/main/java/io/github/jtpadilla/example/telegram/impl/: MyAmazingBot.java
java/lib/: BUILD.bazel
java/platform/server/agent/: BUILD.bazel
java/platform/server/agent/src/main/java/io/github/jtpadilla/server/agentserver/: AgentServer.java
java/product/iatevaleagent/: BUILD.bazel
java/product/iatevaleagent/src/main/java/io/github/jtpadilla/product/iatevaleagent/: IaTevaleAgent.java  IaTevaleAgentModule.java
md/: HelidonServiceRegistryProgramatic.md
md/tips/: 10tips.md
patches/: BUILD  (+1 more)
proto/example/helidon/grpc/: BUILD.bazel  echo.proto
proto/example/sample/: BUILD.bazel  domain.proto
(+678 files in other folders)
