load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "client-sc-gemma3",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.gemma3.Gemma3Client",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_httpcomponents_httpcore",
        "@maven//:org_jspecify_jspecify",
    ],
)
