load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")

java_binary(
    name = "telegrambots",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.telegram.TelegrambotsExample",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_telegram_telegrambots_client",
        "@maven//:org_telegram_telegrambots_longpolling",
        "@maven//:org_telegram_telegrambots_meta",
        "//java/bootstrap/gcloud/context",
        "//java/bootstrap/unit",
    ],
)
