load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_proto_library", "java_test")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "domain_proto",
    srcs = ["domain.proto"],
    deps = [
    ],
)

java_proto_library(
    name = "domain_java_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":domain_proto",
    ],
)
