load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "sandbox",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.a2a.sandbox.Main",
    deps = [
        "//proto/lf/a2a/v1:a2a_java_proto",
        "@maven//:io_helidon_http_helidon_http",
        "@maven//:io_helidon_webserver_helidon_webserver",
        "@protobuf//:protobuf_java_util",
    ],
)
