load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")
package(default_visibility = ["//visibility:public"])

java_library(
    name = "server",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//proto/lf/a2a/v1:a2a_java_grpc",
        "//proto/lf/a2a/v1:a2a_java_proto",
        "@grpc-java//core",
        "@grpc-java//netty",
        "@grpc-java//stub",
    ],
)
