load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_plugin")

package(default_visibility = ["//visibility:public"])

# 3. Ahora la librería es mucho más limpia: sin 'plugins' explícitos
java_library(
    name = "dagger_example_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//java/third_party:dagger",
    ],
)

java_binary(
    name = "dagger_example",
    main_class = "io.github.jtpadilla.example.dagger.health.HealthMonitorApp",
    runtime_deps = [":dagger_example_lib"],
)
