load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

java_binary(
    name = "datastore",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.gcloud.datastore.DatastoreExample",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_cloud_google_cloud_datastore",
        "//java/bootstrap/gcloud/context",
    ],
)
