load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "apifuture",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.googleapi.apifuture.ApiFutureExample",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_api_api_common",
    ],
)
