load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_binary(
    name = "server",
    srcs = [
        "src/main/java/io/helidon/example/grpc/EchoService.java",
        "src/main/java/io/helidon/example/grpc/GrpcServerMain.java",
    ],
    main_class = "io.helidon.example.grpc.GrpcServerMain",
    deps = [
        "//java/lib:helidon",
        "//proto/example/helidon/grpc:echo_java_grpc",
        "//proto/example/helidon/grpc:echo_java_proto",
        "@maven//:io_helidon_webserver_helidon_webserver",
        "@maven//:io_helidon_webserver_helidon_webserver_grpc",
        "@maven//:io_helidon_logging_helidon_logging_common",
        "@maven//:io_helidon_logging_helidon_logging_jul",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_jspecify_jspecify",
    ],
)

java_binary(
    name = "client",
    srcs = [
        "src/main/java/io/helidon/example/grpc/GrpcClientMain.java",
    ],
    main_class = "io.helidon.example.grpc.GrpcClientMain",
    deps = [
        "//java/lib:helidon",
        "//proto/example/helidon/grpc:echo_java_grpc",
        "//proto/example/helidon/grpc:echo_java_proto",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_stub",
        "@maven//:io_grpc_grpc_netty_shaded",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)
