load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")

java_binary(
    name = "001-hello-world",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.javelit.helloworld.HelloWorld",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_javelit_javelit",
    ],
)
