load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "001-display-text",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.javelit.displaytext.DisplayText",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_javelit_javelit",
    ],
)
