load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")

java_binary(
    name = "002-display-text",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.javelit.displaytext.DisplayText",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_javelit_javelit",
    ],
)
