load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")

java_binary(
    name = "004-display-table-map",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.javelit.displaytablemap.DisplayTableMap",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_javelit_javelit",
        "@maven//:tech_tablesaw_tablesaw_core",
    ],
)
