load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "006-draw-gauge",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.javelit.drawgauge.DrawGauge",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_javelit_javelit",
        "@maven//:org_icepear_echarts_echarts_java",
    ],
)
