load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "009-widget-checkbox-options",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.javelit.widgetcheckboxoptions.WidgetCheckBoxOptions",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_javelit_javelit",
        "@maven//:org_icepear_echarts_echarts_java",
    ],
)
