load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")

java_binary(
    name = "013-firstapp",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "io.github.jtpadilla.example.javelit.firstapp.FirstApp",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_api_gax",
        "@maven//:io_javelit_javelit",
        "@maven//:org_icepear_echarts_echarts_java",
        "@maven//:tech_tablesaw_tablesaw_core",
    ],
)
