load("@rules_java//java:defs.bzl", "java_binary", "java_import", "java_library", "java_test")
package(default_visibility = ["//visibility:public"])

java_library(
    name = "agent",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "@maven//:com_google_inject_guice",
        "//java/third_party/closeable",
    ],
)
