load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
)

java_proto_library(
    name = "echo_java_proto",
    deps = [":echo_proto"],
)

java_grpc_library(
    name = "echo_java_grpc",
    srcs = [":echo_proto"],
    deps = [":echo_java_proto"],
)
