load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "count-tokens",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.google.genai.examples.CountTokens",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_genai_google_genai",
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_httpcomponents_httpcore",
        "@maven//:org_jspecify_jspecify",
    ],
)
